; ModuleID = '/home/carl/AnghaBench/mruby/mrbgems/mruby-struct/src/extr_struct.c_mrb_mruby_struct_gem_init.c'
source_filename = "/home/carl/AnghaBench/mruby/mrbgems/mruby-struct/src/extr_struct.c_mrb_mruby_struct_gem_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }
%struct.RClass = type { i32 }

@.str = private unnamed_addr constant [7 x i8] c"Struct\00", align 1
@MRB_TT_ARRAY = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [4 x i8] c"new\00", align 1
@mrb_struct_s_def = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [3 x i8] c"==\00", align 1
@mrb_struct_equal = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [3 x i8] c"[]\00", align 1
@mrb_struct_aref = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [4 x i8] c"[]=\00", align 1
@mrb_struct_aset = common dso_local global i32 0, align 4
@.str.5 = private unnamed_addr constant [8 x i8] c"members\00", align 1
@mrb_struct_members = common dso_local global i32 0, align 4
@.str.6 = private unnamed_addr constant [11 x i8] c"initialize\00", align 1
@mrb_struct_initialize = common dso_local global i32 0, align 4
@.str.7 = private unnamed_addr constant [16 x i8] c"initialize_copy\00", align 1
@mrb_struct_init_copy = common dso_local global i32 0, align 4
@.str.8 = private unnamed_addr constant [5 x i8] c"eql?\00", align 1
@mrb_struct_eql = common dso_local global i32 0, align 4
@.str.9 = private unnamed_addr constant [5 x i8] c"size\00", align 1
@mrb_struct_len = common dso_local global i32 0, align 4
@.str.10 = private unnamed_addr constant [7 x i8] c"length\00", align 1
@.str.11 = private unnamed_addr constant [5 x i8] c"to_a\00", align 1
@mrb_struct_to_a = common dso_local global i32 0, align 4
@.str.12 = private unnamed_addr constant [7 x i8] c"values\00", align 1
@.str.13 = private unnamed_addr constant [5 x i8] c"to_h\00", align 1
@mrb_struct_to_h = common dso_local global i32 0, align 4
@.str.14 = private unnamed_addr constant [10 x i8] c"values_at\00", align 1
@mrb_struct_values_at = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mrb_mruby_struct_gem_init(%struct.TYPE_6__* %0) #0 {
  %2 = alloca %struct.TYPE_6__*, align 8
  %3 = alloca %struct.RClass*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %2, align 8
  %4 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %5 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %6 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = call %struct.RClass* @mrb_define_class(%struct.TYPE_6__* %4, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i32 %7)
  store %struct.RClass* %8, %struct.RClass** %3, align 8
  %9 = load %struct.RClass*, %struct.RClass** %3, align 8
  %10 = load i32, i32* @MRB_TT_ARRAY, align 4
  %11 = call i32 @MRB_SET_INSTANCE_TT(%struct.RClass* %9, i32 %10)
  %12 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %13 = load %struct.RClass*, %struct.RClass** %3, align 8
  %14 = load i32, i32* @mrb_struct_s_def, align 4
  %15 = call i32 (...) @MRB_ARGS_ANY()
  %16 = call i32 @mrb_define_class_method(%struct.TYPE_6__* %12, %struct.RClass* %13, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i32 %14, i32 %15)
  %17 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %18 = load %struct.RClass*, %struct.RClass** %3, align 8
  %19 = load i32, i32* @mrb_struct_equal, align 4
  %20 = call i32 @MRB_ARGS_REQ(i32 1)
  %21 = call i32 @mrb_define_method(%struct.TYPE_6__* %17, %struct.RClass* %18, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.2, i64 0, i64 0), i32 %19, i32 %20)
  %22 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %23 = load %struct.RClass*, %struct.RClass** %3, align 8
  %24 = load i32, i32* @mrb_struct_aref, align 4
  %25 = call i32 @MRB_ARGS_REQ(i32 1)
  %26 = call i32 @mrb_define_method(%struct.TYPE_6__* %22, %struct.RClass* %23, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.3, i64 0, i64 0), i32 %24, i32 %25)
  %27 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %28 = load %struct.RClass*, %struct.RClass** %3, align 8
  %29 = load i32, i32* @mrb_struct_aset, align 4
  %30 = call i32 @MRB_ARGS_REQ(i32 2)
  %31 = call i32 @mrb_define_method(%struct.TYPE_6__* %27, %struct.RClass* %28, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.4, i64 0, i64 0), i32 %29, i32 %30)
  %32 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %33 = load %struct.RClass*, %struct.RClass** %3, align 8
  %34 = load i32, i32* @mrb_struct_members, align 4
  %35 = call i32 (...) @MRB_ARGS_NONE()
  %36 = call i32 @mrb_define_method(%struct.TYPE_6__* %32, %struct.RClass* %33, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.5, i64 0, i64 0), i32 %34, i32 %35)
  %37 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %38 = load %struct.RClass*, %struct.RClass** %3, align 8
  %39 = load i32, i32* @mrb_struct_initialize, align 4
  %40 = call i32 (...) @MRB_ARGS_ANY()
  %41 = call i32 @mrb_define_method(%struct.TYPE_6__* %37, %struct.RClass* %38, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.6, i64 0, i64 0), i32 %39, i32 %40)
  %42 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %43 = load %struct.RClass*, %struct.RClass** %3, align 8
  %44 = load i32, i32* @mrb_struct_init_copy, align 4
  %45 = call i32 @MRB_ARGS_REQ(i32 1)
  %46 = call i32 @mrb_define_method(%struct.TYPE_6__* %42, %struct.RClass* %43, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.7, i64 0, i64 0), i32 %44, i32 %45)
  %47 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %48 = load %struct.RClass*, %struct.RClass** %3, align 8
  %49 = load i32, i32* @mrb_struct_eql, align 4
  %50 = call i32 @MRB_ARGS_REQ(i32 1)
  %51 = call i32 @mrb_define_method(%struct.TYPE_6__* %47, %struct.RClass* %48, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.8, i64 0, i64 0), i32 %49, i32 %50)
  %52 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %53 = load %struct.RClass*, %struct.RClass** %3, align 8
  %54 = load i32, i32* @mrb_struct_len, align 4
  %55 = call i32 (...) @MRB_ARGS_NONE()
  %56 = call i32 @mrb_define_method(%struct.TYPE_6__* %52, %struct.RClass* %53, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.9, i64 0, i64 0), i32 %54, i32 %55)
  %57 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %58 = load %struct.RClass*, %struct.RClass** %3, align 8
  %59 = load i32, i32* @mrb_struct_len, align 4
  %60 = call i32 (...) @MRB_ARGS_NONE()
  %61 = call i32 @mrb_define_method(%struct.TYPE_6__* %57, %struct.RClass* %58, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.10, i64 0, i64 0), i32 %59, i32 %60)
  %62 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %63 = load %struct.RClass*, %struct.RClass** %3, align 8
  %64 = load i32, i32* @mrb_struct_to_a, align 4
  %65 = call i32 (...) @MRB_ARGS_NONE()
  %66 = call i32 @mrb_define_method(%struct.TYPE_6__* %62, %struct.RClass* %63, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.11, i64 0, i64 0), i32 %64, i32 %65)
  %67 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %68 = load %struct.RClass*, %struct.RClass** %3, align 8
  %69 = load i32, i32* @mrb_struct_to_a, align 4
  %70 = call i32 (...) @MRB_ARGS_NONE()
  %71 = call i32 @mrb_define_method(%struct.TYPE_6__* %67, %struct.RClass* %68, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.12, i64 0, i64 0), i32 %69, i32 %70)
  %72 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %73 = load %struct.RClass*, %struct.RClass** %3, align 8
  %74 = load i32, i32* @mrb_struct_to_h, align 4
  %75 = call i32 (...) @MRB_ARGS_NONE()
  %76 = call i32 @mrb_define_method(%struct.TYPE_6__* %72, %struct.RClass* %73, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.13, i64 0, i64 0), i32 %74, i32 %75)
  %77 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %78 = load %struct.RClass*, %struct.RClass** %3, align 8
  %79 = load i32, i32* @mrb_struct_values_at, align 4
  %80 = call i32 (...) @MRB_ARGS_ANY()
  %81 = call i32 @mrb_define_method(%struct.TYPE_6__* %77, %struct.RClass* %78, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.14, i64 0, i64 0), i32 %79, i32 %80)
  ret void
}

declare dso_local %struct.RClass* @mrb_define_class(%struct.TYPE_6__*, i8*, i32) #1

declare dso_local i32 @MRB_SET_INSTANCE_TT(%struct.RClass*, i32) #1

declare dso_local i32 @mrb_define_class_method(%struct.TYPE_6__*, %struct.RClass*, i8*, i32, i32) #1

declare dso_local i32 @MRB_ARGS_ANY(...) #1

declare dso_local i32 @mrb_define_method(%struct.TYPE_6__*, %struct.RClass*, i8*, i32, i32) #1

declare dso_local i32 @MRB_ARGS_REQ(i32) #1

declare dso_local i32 @MRB_ARGS_NONE(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
